fix: triage from parent's child screen works now